--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </div>
 	<h1><h1><h2></h2></h1></h1>
     <div class="buttons">
-        <a href="javascript://" class="link" onclick="location.href='tg://resolve?domain=speedomusic'"><i class="fab fa-telegram-plane"></i></a>
+        <a href="javascript://" class="link" onclick="location.href='tg://resolve?domain=warkadoesspeedo'"><i class="fab fa-telegram-plane"></i></a>
+		<a href="javascript://" class="link" onclick="location.href='tg://resolve?domain=speedomusic'"><i class="fas fa-bullhorn"></i></a>
     </div>
     <hr width="295">
     <div class="center ebat">
