--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <meta charset="utf-8">
         <title>Pemo</title>
         <meta property="og:title" content="Pemo">
-        <meta property="og:locale" content="en_EU">
-        <meta property="og:description" content="Semolik's main page">
+        <meta property="og:locale" content="ru">
+        <meta property="og:description" content="Pemo main page">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
         <script src="https://sindresorhus.com/devtools-detect/index.js"></script>
